[project]
name = "aws_vista_lens"
version = "0.1.0"
description = ""
authors = [
    { name = "Navaneethan Ghanti", email = "navaneethan.ghanti@gmail.com" }
]
readme = "readme.md"
requires-python = ">=3.8"
dependencies = ["boto3",
                "pyarrow"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aws_vista_lens = "aws_vista_lens.__main__:main"